--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,7 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
-
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-
-    /* 
-    animation-delay: 3s;
-    animation-iteration-count: 3; 
-    */
+    animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
@@ -81,10 +73,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
-
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+    animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
