--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,5 +1,6 @@
 .card {
 
+    // FUNCTIONALITY
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
@@ -7,7 +8,7 @@
 
     &__side {
         background-color: orangered;
-        color: #fff;
+        color: $color-white;
         font-size: 2rem;
 
         height: 50rem;
@@ -18,6 +19,7 @@
         width: 100%;
         backface-visibility: hidden;
         border-radius: 3px;
+        overflow: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
         &--front {
@@ -27,7 +29,7 @@
             transform: rotateY(180deg);
 
             &-1{
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark)
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
         }
 
@@ -41,4 +43,51 @@
     &:hover &__side--back {
         transform: rotateY(0deg);
     }
+
+    // FRONT SIDE STYLING
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url("../img/nat-5.jpg");
+        }
+
+        &--2 {
+            background-image: url("../img/nat-5.jpg");
+        }
+
+        &--3 {
+            background-image: url("../img/nat-5.jpg");
+        }
+    }
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 75%;
+    }
+
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-secondary-light, .85), 
+            rgba($color-secondary-dark, .85))
+        }
+    }
 }
+
