--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -8,6 +9,11 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
+        font-size: $default-font-size;
+
+        //Changes for button element
+        cursor: pointer;
+        border: none;
     }
 
     &:hover {
@@ -20,7 +26,9 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
