--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "layout/footer";
 @import "layout/navigation";
 
+
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
@@ -21,5 +22,7 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
+@import "components/popup";
+
 
 
