--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999; }
+  z-index: 9999;
+  display: none; }
   .popup__content {
     position: absolute;
     top: 50%;
