--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,11 @@
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub {
@@ -19,6 +24,10 @@
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -32,6 +41,14 @@
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -59,6 +76,5 @@ body {
     font-size: $default-font-size;
     line-height: 1.7;
     color: $color-gray-dark;
-    padding: 3rem;
 }
 
